--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>دبلیو مر | مجتبی عرفان راد</title>
+    <title>مجتبی عرفان راد | طراحی و برنامه نویسی وب اپلیکیشن</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
